Colisiones de balas con entorno listo

--- a/TFGMM/Assets/Photon/PhotonBolt/project.json
+++ b/TFGMM/Assets/Photon/PhotonBolt/project.json
@@ -622,6 +622,29 @@
       "Name": "deletePlayersEvent",
       "Guid": "346b72dd-f5ea-4520-94ba-1f3541157e84",
       "Groups": []
+    },
+    {
+      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
+      "Properties": [
+        {
+          "Name": "Collision",
+          "Enabled": true,
+          "Expanded": true,
+          "ReplicationMode": 1,
+          "Priority": 1,
+          "PropertyType": {
+            "$type": "Photon.Bolt.Compiler.PropertyTypeBool, bolt.compiler"
+          },
+          "AssetSettings": {
+            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
+          }
+        }
+      ],
+      "EntitySenders": 3,
+      "GlobalSenders": 1,
+      "Name": "CollisionEvent",
+      "Guid": "288475a8-4afd-4a0c-bdfc-9acab4f577b8",
+      "Groups": []
     }
   ],
   "ActiveGroup": "Everything"
