--- a/TFGMM/Assets/Photon/PhotonBolt/project.json
+++ b/TFGMM/Assets/Photon/PhotonBolt/project.json
@@ -399,8 +399,7 @@
           "Priority": 1,
           "PropertyType": {
             "$type": "Photon.Bolt.Compiler.PropertyTypeInteger, bolt.compiler",
-            "MaxValue": 1023,
-            "CompressionEnabled": true
+            "MaxValue": 1023
           },
           "AssetSettings": {
             "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
@@ -414,15 +413,13 @@
           "Priority": 1,
           "PropertyType": {
             "$type": "Photon.Bolt.Compiler.PropertyTypeInteger, bolt.compiler",
-            "MaxValue": 1023,
-            "CompressionEnabled": true
+            "MaxValue": 1023
           },
           "AssetSettings": {
             "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
           }
         }
       ],
-      "EntitySenders": 1,
       "GlobalSenders": 3,
       "Name": "HealthEvent",
       "Guid": "78bc27a2-6387-44e8-8e3d-67cfe24e01f2",
