--- a/TFGMM/Assets/Photon/PhotonBolt/project.json
+++ b/TFGMM/Assets/Photon/PhotonBolt/project.json
@@ -671,6 +671,45 @@
       "Name": "setPlayerEvent",
       "Guid": "a1ec2c58-4ad2-4911-a456-3f25b5540d47",
       "Groups": []
+    },
+    {
+      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
+      "Properties": [],
+      "GlobalSenders": 2,
+      "Name": "JoinPlayerEvent",
+      "Guid": "02913397-d12d-447f-993f-6b3d21f1a8b5",
+      "Groups": []
+    },
+    {
+      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
+      "Properties": [
+        {
+          "Name": "numPlayersConnected",
+          "Enabled": true,
+          "Expanded": true,
+          "ReplicationMode": 1,
+          "Priority": 1,
+          "PropertyType": {
+            "$type": "Photon.Bolt.Compiler.PropertyTypeInteger, bolt.compiler",
+            "MaxValue": 255
+          },
+          "AssetSettings": {
+            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
+          }
+        }
+      ],
+      "GlobalSenders": 1,
+      "Name": "NumberPlayersEvent",
+      "Guid": "be732a53-12b0-4f11-b677-c6b51405c2d5",
+      "Groups": []
+    },
+    {
+      "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
+      "Properties": [],
+      "GlobalSenders": 1,
+      "Name": "GoGameEvent",
+      "Guid": "d81a9395-a364-4f38-9c02-07eb52c2d42e",
+      "Groups": []
     }
   ],
   "ActiveGroup": "Everything"
