--- a/TFGMM/Assets/Photon/PhotonBolt/project.json
+++ b/TFGMM/Assets/Photon/PhotonBolt/project.json
@@ -997,7 +997,22 @@
     },
     {
       "$type": "Photon.Bolt.Compiler.EventDefinition, bolt.compiler",
-      "Properties": [],
+      "Properties": [
+        {
+          "Name": "winnerTeam",
+          "Enabled": true,
+          "Expanded": true,
+          "ReplicationMode": 1,
+          "Priority": 1,
+          "PropertyType": {
+            "$type": "Photon.Bolt.Compiler.PropertyTypeInteger, bolt.compiler",
+            "MaxValue": 255
+          },
+          "AssetSettings": {
+            "$type": "Photon.Bolt.Compiler.PropertyEventSettings, bolt.compiler"
+          }
+        }
+      ],
       "Name": "updatePlayerStatsEvent",
       "Guid": "0daf43de-ee6d-4539-8717-9b073236f8f9",
       "Groups": []
